syntax = 'proto3';

package authPackage;

service Auth {
  rpc loginUser(loginUserRequest) returns (loginUserResponse) {}
}

message loginUserRequest {
  string email = 1;
  string password = 2;
}

message loginUserResponse {
  bool success = 1;
  string message = 2;
  Data data = 3;
};

message Data { string token = 1; };
